Source/WebCore/rendering/RenderRegion.h
@@ -100,6 +100,9 @@ public:
     // height of a single column or page in the set.
     virtual LayoutUnit pageLogicalWidth() const;
     virtual LayoutUnit pageLogicalHeight() const;
+
+    virtual LayoutUnit minPreferredLogicalWidth() const OVERRIDE;
+    virtual LayoutUnit maxPreferredLogicalWidth() const OVERRIDE;
     
     // This method represents the logical height of the entire flow thread portion used by the region or set.
     // For RenderRegions it matches logicalPaginationHeight(), but for sets it is the height of all the pages
@@ -111,7 +114,7 @@ public:
     // page.
     virtual LayoutUnit pageLogicalTopForOffset(LayoutUnit offset) const;
     
-    virtual void expandToEncompassFlowThreadContentsIfNeeded() {};
+    virtual void expandToEncompassFlowThreadContentsIfNeeded() { };
 
     // Whether or not this region is a set.
     virtual bool isRenderRegionSet() const { return false; }
@@ -128,6 +131,12 @@ protected:
 
 private:
     virtual const char* renderName() const { return "RenderRegion"; }
+
+    // FIXME: these functions should be revisited once RenderRegion inherits from RenderBlock
+    // instead of RenderReplaced (see https://bugs.webkit.org/show_bug.cgi?id=74132 )
+    // When width is auto, use normal block/box sizing code except when inline.
+    virtual bool isInlineBlockOrInlineTable() const OVERRIDE { return isInline() && style()->logicalWidth().isAuto(); }
+    virtual bool shouldComputeSizeAsReplaced() const OVERRIDE { return !style()->logicalWidth().isAuto(); }
 
     virtual void insertedIntoTree() OVERRIDE;
     virtual void willBeRemovedFromTree() OVERRIDE;
